--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -42,6 +42,20 @@
     color: #2c3e50;
   }
 }
+label {
+  position: relative;
+  top: 5px;
+  left: 10px;
+  font-weight: 400;
+  font-size: 16px;
+  opacity: 0;
+  color: #1abc9c;
+  transition: all 0.2s ease-in-out;
+}
+label.visible {
+  opacity: 1; /* Show label when input has value */
+  top: -10px;
+}
 @media (min-width: 500px) {
   .star {
     width: 70%;
